# django-keel

./: .gitignore  CHANGELOG.md  LICENSE  copier.yml  mkdocs.yml  pyproject.toml
docs/features/: dashboard.md
docs/superpowers/plans/: 2026-06-12-dashboard-template.md
docs/superpowers/specs/: 2026-06-12-dashboard-template-design.md
template/: .dockerignore.jinja  .env.example.jinja  .env.jinja  .gitignore.jinja  .pre-commit-config.yaml.jinja  Dockerfile.jinja  Justfile.jinja  README.md.jinja  compose-production.yml.jinja  docker-compose.yml.jinja  entrypoint.sh.jinja  manage.py.jinja  mkdocs.yml.jinja  package.json.jinja  pyproject.toml.jinja  pytest.ini.jinja  {% if dependency_manager == 'poetry' %}pyproject.toml{% endif %}.jinja  {% if dependency_manager == 'uv' %}pyproject.toml{% endif %}.jinja
template/.envs/: .local.jinja  .production.jinja
template/.github/workflows/: ci.yml.jinja
template/apps/account/: admin.py  forms.py  models.py  password_validator.py  serializers.py  social_auth.py  tasks.py  tokens.py  urls.py  views.py
template/apps/billing/: {% if use_stripe and stripe_mode == 'advanced' %}admin.py{% endif %}.jinja  {% if use_stripe and stripe_mode == 'advanced' %}models.py{% endif %}.jinja
template/apps/core/: admin_dashboard.py  email_templates.py.jinja  mixins.py  pagination.py  serializers.py  urls.py.jinja  utils.py  views.py.jinja
template/apps/dashboard/: autocomplete.py  crispy_layout.py  forms.py  mixins.py  sidebar_menu.py  urls.py  widgets.py
template/apps/history/: models.py
template/apps/notifications/: admin.py  email_classes.py  enums.py  models.py  service.py  tasks.py
template/apps/users/: admin.py.jinja  models.py.jinja  serializers.py  urls.py.jinja  views.py
template/config/: asgi.py.jinja  urls.py.jinja  wsgi.py.jinja  {% if background_tasks in ['celery', 'both'] %}celery.py{% endif %}.jinja
template/config/settings/: base.py.jinja  local.py.jinja  prod.py.jinja  test.py.jinja
template/deploy/: README.md.jinja
template/deploy/compose/: .env.dev.example.jinja  .env.prod.example  .env.traefik.example  docker-compose.dev.yml.jinja  docker-compose.prod.yml.jinja  docker-compose.traefik.yml.jinja
template/docs/: index.md.jinja
template/frontend/dashboard/: styles.css
template/frontend/shared/: tokens.css
template/frontend/site/: styles.css
template/tailwind/: styles.css
template/templates/admin/: index.html
template/templates/crispy_layout/: card.html
template/templates/dashboard/: base.html  base.html.jinja  base_iframe.html  base_iframe.html.jinja
template/templates/notifications/: base_email.html.jinja  email_verification.html.jinja  password_reset.html.jinja  user_welcome.html.jinja
template/templates/tailwind/: table_inline_formset.html
template/tests/: conftest.py
template/tests/account/: test_accept_terms.py  test_apple_social_auth.py.jinja  test_email_verification.py  test_register.py  test_social_auth_consent.py  test_terms_up_to_date.py
template/tests/core/: test_common.py
template/tests/dashboard/: conftest.py  test_forms.py  test_permissions.py  (+2 more)
tests/: test_dashboard_generation.py  test_django_integration.py  test_features.py  test_generation.py
(+41 files in other folders)
